--- a/src/App.css
+++ b/src/App.css
@@ -39,11 +39,28 @@
 
 .bg-nav {
   height: 100%;
-  background-color: #B667F1;
+  background-image: url("img/sky-2.jpeg");
+  background-size: cover;
 }
 
 .jumbotron {
-  height: 300px;
+  height: 350px;
   display: flex;
-  align-items: center;
+  text-align: center;
+}
+
+.jumbotron h1 {
+  margin: 100px 0 0px;
+  color: #f2e2ff;
+}
+
+.jumbotron h2 {
+  color: #f2e2ff;
+  margin-bottom: 20px;
+}
+
+.site-footer {
+  height: auto;
+  background-image: linear-gradient(#f2e2ff, white);
+  padding: 20px 0;
 }
